--- a/Project/Domotique/Debug/makefile
+++ b/Project/Domotique/Debug/makefile
@@ -9,6 +9,7 @@ RM := rm -rf
 # All of the sources participating in the build are defined here
 -include sources.mk
 -include Sources/tinyxml2/subdir.mk
+-include Sources/Phenomenon/subdir.mk
 -include Sources/subdir.mk
 -include subdir.mk
 -include objects.mk
